fix misalignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 body{
   background-color: #17181F;
   color: #ddd;
